fix overflow card text

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 .card-img-overlay{
         display: none;
+        overflow: hidden;
     }
 
 .card:hover{
